Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-124829

The appearance of icons in QFileSystemModel is simplified and differs from the typical Windows icons.

XMLWordPrintable

    • Windows
    • e10308769 (dev), d2637d232 (6.8), ed093e776 (6.7)

      The appearance of icons in QFileSystemModel is simplified and differs from the typical appearance of Windows icons.

      The appearance of icons differs from earlier versions (e.g., 6.6.3).

      To reproduce the issue, run the attached example project and compare the outcome with the attached pictures.

        1. 6_7.png
          6_7.png
          14 kB
        2. 6_6_3.png
          6_6_3.png
          17 kB
        3. untitled29.zip
          2 kB
        For Gerrit Dashboard: QTBUG-124829
        # Subject Branch Project Status CR V

            vhilshei Volker Hilsheimer
            mahdi.belila Mehdi Belila
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes